--- a/objects/mg190_b2_19710825_tape1.md
+++ b/objects/mg190_b2_19710825_tape1.md
@@ -3,3 +3,447 @@
 ---
 # Jess Taylor and Dorothy Taylor Interview #1, 08/25/1971 [transcript]
 
+00;00;00;00 - 00;00;09;29
+John Smith
+What? When did you first meet Mr. Lewis? It was in the fall.
+
+00;00;09;29 - 00;00;11;19
+Jess Taylor
+Of 19.
+
+00;00;11;19 - 00;00;12;00
+John Smith
+30.
+
+00;00;12;00 - 00;00;18;03
+Jess Taylor
+Three. I went hunting into the big creek area from the outside with a fox.
+
+00;00;18;03 - 00;00;19;09
+John Smith
+Train.
+
+00;00;19;11 - 00;00;22;02
+Jess Taylor
+And.
+
+00;00;22;04 - 00;00;23;13
+John Smith
+As we passed the Lewis.
+
+00;00;23;13 - 00;00;24;09
+Jess Taylor
+Place, it was.
+
+00;00;24;09 - 00;00;33;16
+John Smith
+Mainly across the river from the trail. And you would hardly know it was there. But I heard the dogs barking. David was a cougar hunter.
+
+00;00;33;16 - 00;00;37;25
+Jess Taylor
+And had these cougar hound dog and I saw.
+
+00;00;37;25 - 00;00;42;12
+John Smith
+More of the country. I became interested. Then the next thing.
+
+00;00;42;14 - 00;00;46;09
+Jess Taylor
+In April.
+
+00;00;46;11 - 00;00;47;12
+John Smith
+I lived in the summer.
+
+00;00;47;13 - 00;00;47;28
+Jess Taylor
+I at that.
+
+00;00;47;28 - 00;00;51;17
+John Smith
+Time I started out.
+
+00;00;51;17 - 00;00;52;03
+Jess Taylor
+With a pack.
+
+00;00;52;03 - 00;00;54;21
+John Smith
+Mule and a saddle heart to go in.
+
+00;00;54;21 - 00;00;55;26
+Jess Taylor
+And see this.
+
+00;00;55;26 - 00;01;12;05
+John Smith
+Lewis place. And I went over seven feet of snow on Margaret. Great summer. It was about a four day trip and I ran the line. From where? From the MRI. Yeah.
+
+00;01;12;07 - 00;01;18;06
+Jess Taylor
+And I can't get across the big creek.
+
+00;01;18;08 - 00;01;19;14
+John Smith
+On what is known as Cliff.
+
+00;01;19;14 - 00;01;20;29
+Jess Taylor
+Creek.
+
+00;01;21;02 - 00;01;21;19
+John Smith
+And what over in.
+
+00;01;21;19 - 00;01;25;23
+Jess Taylor
+Talk today, That evening, and ask him if he wished to sell his place.
+
+00;01;25;27 - 00;01;33;09
+John Smith
+How do you know? They got across the creek and the. No, Breckenridge got a swing at the old swing. You know, not that hard. Yeah, him.
+
+00;01;33;11 - 00;01;41;07
+Jess Taylor
+Didn't. And at that time, there was an old suspension bridge there, which has since been replaced.
+
+00;01;41;10 - 00;01;43;05
+John Smith
+With a steel span.
+
+00;01;43;07 - 00;01;51;26
+Jess Taylor
+Well, I asked Davis if he would sell his place, and the. He said that he did. And I asked him what he.
+
+00;01;51;26 - 00;01;52;21
+John Smith
+Wanted for it.
+
+00;01;52;21 - 00;01;55;10
+Jess Taylor
+And after I looked around a bit and he.
+
+00;01;55;10 - 00;02;01;19
+John Smith
+Told me and I said, well, I'll make you a deposit on it now, and this fall.
+
+00;02;01;21 - 00;02;05;04
+Jess Taylor
+I'll come in hunting and I'll be here.
+
+00;02;05;06 - 00;02;06;16
+John Smith
+During the month of November.
+
+00;02;06;16 - 00;02;06;27
+Jess Taylor
+And.
+
+00;02;06;27 - 00;02;13;08
+John Smith
+We will complete the deal. They have had three administrators and it was necessary.
+
+00;02;13;08 - 00;02;14;05
+Jess Taylor
+For these.
+
+00;02;14;07 - 00;02;15;11
+John Smith
+Men as traders.
+
+00;02;15;13 - 00;02;20;25
+Jess Taylor
+At least one of them, to bring the necessary papers, the they and so.
+
+00;02;20;25 - 00;02;22;11
+John Smith
+On, and come in to witness.
+
+00;02;22;11 - 00;02;22;29
+Jess Taylor
+The.
+
+00;02;23;00 - 00;02;24;08
+John Smith
+Transfer.
+
+00;02;24;10 - 00;02;28;29
+Jess Taylor
+And that's the way that I.
+
+00;02;29;01 - 00;02;30;12
+John Smith
+Acquired.
+
+00;02;30;14 - 00;02;32;00
+Jess Taylor
+What was then known as the.
+
+00;02;32;00 - 00;02;40;00
+John Smith
+Lowest range. How old would Mr. Lewis have been about? And Mr. Lewis at that time was 92 years old.
+
+00;02;40;02 - 00;02;50;11
+Jess Taylor
+And we moved. I moved in that fall after the after the hunting was over and.
+
+00;02;50;13 - 00;02;52;23
+John Smith
+Dave had a small cabin. There was two cabins.
+
+00;02;52;23 - 00;03;01;13
+Jess Taylor
+On the place. And I mentioned today that.
+
+00;03;01;15 - 00;03;05;07
+John Smith
+The small cabin was but his as long as he wished to use it.
+
+00;03;05;09 - 00;03;07;15
+Jess Taylor
+That he would live there just.
+
+00;03;07;15 - 00;03;14;20
+John Smith
+As long as he worked. And we he was very active. He take care of himself.
+
+00;03;14;22 - 00;03;17;28
+Jess Taylor
+Do his cooking and.
+
+00;03;18;00 - 00;03;27;10
+John Smith
+We would help him a little with his work and so on. But they would very hard of hearing. But he could read without.
+
+00;03;27;10 - 00;03;31;15
+Jess Taylor
+Glasses and.
+
+00;03;31;18 - 00;03;36;21
+John Smith
+He had a very active memory. And I would go down of evenings and just sit down and then they would.
+
+00;03;36;21 - 00;03;40;01
+Jess Taylor
+Start to tell me these various phases of his.
+
+00;03;40;01 - 00;03;53;01
+John Smith
+Life. And to start with, there was a veteran of the Civil War, and he made one remark.
+
+00;03;53;06 - 00;03;58;21
+Jess Taylor
+That was of interest. He said, I was in.
+
+00;03;58;21 - 00;04;02;20
+John Smith
+The trenches before Vicksburg with Wild Bill Hickok.
+
+00;04;02;22 - 00;04;03;27
+Jess Taylor
+And I.
+
+00;04;03;27 - 00;04;04;04
+John Smith
+Can't.
+
+00;04;04;04 - 00;04;05;16
+Jess Taylor
+Verify that.
+
+00;04;05;18 - 00;04;27;18
+John Smith
+And he said that Wild Bill was, he thought, the finest rifle and pistol shot as lion at that time. And then we go on from there.
+
+00;04;27;20 - 00;04;27;25
+Jess Taylor
+To.
+
+00;04;27;25 - 00;04;42;25
+John Smith
+The Custer match. And the reason that the day was alive was that it was with Bantam. And they would all go.
+
+00;04;42;27 - 00;04;43;17
+Jess Taylor
+I.
+
+00;04;43;24 - 00;04;53;15
+John Smith
+Am under Reno, but Custer, the glory honor, he. He found more Indians. And then he could handle.
+
+00;04;53;15 - 00;04;55;15
+Jess Taylor
+And as we know.
+
+00;04;55;17 - 00;04;58;15
+John Smith
+At every one.
+
+00;04;58;17 - 00;05;00;18
+Jess Taylor
+Out his.
+
+00;05;00;20 - 00;05;17;20
+John Smith
+Soldiers and himself were killed. And they said it was in plain sight when he pulled in another, you know, he was a scout with Reno and. But they didn't touch Custer. They hadn't scalped.
+
+00;05;17;20 - 00;05;20;01
+Jess Taylor
+Him. He was absolutely.
+
+00;05;20;01 - 00;05;31;15
+John Smith
+Intact. Then we go on from there. Did he say what kind of a wound had killed General Custer? No, but it it was very likely a gunshot.
+
+00;05;31;20 - 00;05;38;03
+Jess Taylor
+The Indians had had rifles, and of course, they also had.
+
+00;05;38;05 - 00;05;53;29
+John Smith
+Bows and arrows. No, it was Mr. Lewis, a casual as a scout. Or was he part of the seventh Cavalry himself? Well, he was connected with the seventh Cavalry and his capacity was a scout.
+
+00;05;54;06 - 00;05;54;16
+Jess Taylor
+With.
+
+00;05;54;21 - 00;06;33;15
+John Smith
+Benton. Then we go on from there on down through the Indian marsh today. She paid her campaign, which was the next to the last campaign against the Indians in the United States, the last with the Apaches and there was this troop of soldiers coming down Big Creek. And they were several officers make standard coming from different directions, some of them coming from part my system.
+
+00;06;33;15 - 00;06;59;23
+John Smith
+I'm from Fort Umatilla and but they lived carefully and they were feral. And there was Bonnard and Bonnard, though then there was cavalry all the way from Boise so far fighting. But they said it didn't. The scouts tried to persuade Catley that it wasn't the right thing to go down the bottom of the canyon.
+
+00;06;59;28 - 00;07;00;15
+Jess Taylor
+Because.
+
+00;07;00;15 - 00;07;33;05
+John Smith
+They were they were subject to ambush. He wanted to stay more with the the register as much as possible. But anyway, just about three miles above what is now the Taylor Ranch, why the Indians ambushed them there they get to they were crossing big quick and the Indians on the rocks here and they were just coming from this part into this little into this little grove of timber here.
+
+00;07;33;13 - 00;07;45;13
+John Smith
+They told me exactly where everyone is, one of the old pits there. Yet it would have been between the Taylor Ranch and Cavin Creek. Yeah, yeah, yeah. Closer to the Taylor. Yeah. And, but you can still see the old.
+
+00;07;45;13 - 00;07;54;00
+Jess Taylor
+Trail there where they crossed back and forth. Of course, they've got nutrients down to the blood, then they get the matter of fording the creek and.
+
+00;07;54;02 - 00;08;09;16
+John Smith
+You know, or anything there. And now to mark the area where that ambush, if there's one pit that's. Yeah. And where's the pit in the get below the new trail. yeah. If you're in there sometime when.
+
+00;08;09;21 - 00;08;10;10
+Jess Taylor
+I'm there I'll be.
+
+00;08;10;18 - 00;08;11;10
+John Smith
+Please put.
+
+00;08;11;12 - 00;08;12;05
+Jess Taylor
+On there and show.
+
+00;08;12;05 - 00;08;24;26
+John Smith
+You the pit. Yeah. And just as they were coming out of Big Creek, why the Indians opened up on these soldiers.
+
+00;08;24;26 - 00;08;27;14
+Jess Taylor
+And.
+
+00;08;27;16 - 00;08;36;08
+John Smith
+They said it didn't look very good to him. I was in charge of the ammunition train at that time and also acting in the capacity of the scout. But I held back a little.
+
+00;08;36;10 - 00;08;37;22
+Jess Taylor
+At.
+
+00;08;37;24 - 00;08;56;26
+John Smith
+It yet didn't look good. And then they had black powder, of course, and fed pretty tone. The smoke got detected. The soldiers couldn't see the Indian and the Indians couldn't see the soldiers. So they broke off the engagement and the Indians faded back into rock. But they had they had wounded two soldiers.
+
+00;08;56;29 - 00;08;58;28
+Jess Taylor
+And and they said.
+
+00;08;58;28 - 00;09;05;13
+John Smith
+Well, why I didn't kill them all? I don't know how the Indians were aware at that time. Did he say which side of the group? Yes, they were.
+
+00;09;05;13 - 00;09;06;10
+Jess Taylor
+On the.
+
+00;09;06;13 - 00;09;08;23
+John Smith
+They were on the in the bluff near the point of.
+
+00;09;08;23 - 00;09;09;26
+Jess Taylor
+Bluff comes down there.
+
+00;09;09;27 - 00;09;20;21
+John Smith
+On the north side. Yeah. Yeah. And just as they were just coming through big. Great. See you got this part and they got them get that they were coming up out of the fort.
+
+00;09;20;23 - 00;09;21;07
+Jess Taylor
+And.
+
+00;09;21;14 - 00;09;44;24
+John Smith
+It's a matter of record that one lieutenant was the he was evidently probably out on his first trip and he got a little bit excited and they said when the smoke cleared, why this lieutenant had his arms around the tree. And the funny part of it was he was on the side. Next Indian on it's a matter of record.
+
+00;09;44;27 - 00;10;13;03
+John Smith
+He was caught off guard it by So then they they come on down to Soldier bar and they got in another skirmish there and they were breaking up and Bernard was Captain Bernard was taking his cavalry going back to Fort Mighty. And you know, that that was quite a feat when you look at that country now, they had to go right through the mountain.
+
+00;10;13;07 - 00;10;39;16
+John Smith
+Yeah, Yeah. This time of the year. That was, yeah, yeah, yeah, that's right. Yeah. 1870, 89. August 20th was when August 20th and you know. Yeah. And then Private Egan, he is buried there on Soldier by. Was he killed up there. Yeah. Is he buried there. He's buried down to the river in he. No by right.
+
+00;10;39;16 - 00;10;41;15
+Speaker 3
+Under the monument they say.
+
+00;10;41;17 - 00;10;48;23
+John Smith
+Why did they bury him clear up there. Well, he was killed. Was they were fighting up. Yeah. Right on. They'd gotten out of the creek down. They were backing up on there.
+
+00;10;48;23 - 00;11;05;17
+Speaker 3
+Yeah. Yeah, they were evidently been camped there. But you see, that was the second expedition. They made three expeditions in there before they finally got this, this small band of Indians. Only about 30, 40 5 p.m.. And what was the. And the ambush, was it?
+
+00;11;05;17 - 00;11;07;00
+John Smith
+If you talk to that.
+
+00;11;07;03 - 00;11;28;22
+Speaker 3
+Then the three miles up from your end was part of the same expedition that Sergeant Egan was killed on? No, no. Were an expert out of the prior expedition. And that's only we created the rock. No, no Vinegar Hill. No. And it got its name from the fact that they forgot to pick up any water. The Indians are showing it, and they find it surrounded them on Vinegar Hill.
+
+00;11;28;25 - 00;11;50;26
+Speaker 3
+Well, they went up there without any water, but they happen to have them vinegar. So they they drank the vinegar and and they had they threw out the soldiers and they said it didn't look good, Danny and Adams around it. But they finally slipped out during the night and made it out on back, you know, And I heard the second expedition in that that Private Egan withheld on the soldier.
+
+00;11;50;26 - 00;11;59;04
+Speaker 3
+But it's important because if you read through some of the accounts, it does make clear that these were separate. Okay. Well, now we had a we had the radioman.
+
+00;11;59;06 - 00;12;04;05
+Unknown
+Our copy of them, the back.
+
+00;12;04;08 - 00;12;05;29
+Speaker 3
+Hit the Army.
+
+00;12;06;02 - 00;12;55;06
+Unknown
+And the number of.
+
